--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ text-align: center;
 border-collapse: separate;
 border-spacing: 5px;
 background: #ECE9E0;
-color: #656665;
+color: #54372e;
 border: 16px solid #ECE9E0;
 border-radius: 20px;
 }
@@ -79,4 +79,19 @@ font-weight:500;
 
 .image-card {
 border-radius: 10px;
+}
+
+.btn-keeper {
+margin-top: 20px;
+text-align: center;
+border: 1px;
+margin-bottom: 20px;
+}
+
+.btn {
+background-color: #f07854;
+text-decoration: none;
+color: #fff;
+padding: 12px 16px;
+border-radius: 5px;
 }
